--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ label {
   padding: 4px;
   border: 0;
   outline: 0;
+  border-radius: 5px;
   transition: background-color 0.3s;
 }
 
@@ -74,6 +75,7 @@ label {
   width: 240px;
   height: 30px;
   display: flex;
+  border-radius: 5px;
   justify-content: center;
   align-items: center;
 }
